added css to modal

--- a/index2.html
+++ b/index2.html
@@ -155,17 +155,17 @@
                     <div class="container modal-text">
                         <div class="row">
                             <h2 class="col-md-8" id="title"></h2>
-                            <p class="offset-md-2 col-md-2">
+                            <p class="offset-md-2 col-md-2" id="css-likes">
                                 <i class="fas fa-heart"></i> Likes:
                                 <span id="likes"></span>
                             </p>
                         </div>
                         <hr>
                         <div class="row">
-                            <p class="offset-md-1 col-md-3">Cooking Time:
-                                <span id="time"></span>
+                            <p class="offset-md-1 col-md-5" id="cook-time">Cooking Time:
+                                <span id="time"></span> Minutes
                             </p>
-                            <p class="offset-md-3 col-md-5 text-right" id="diets"></p>
+                            <p class="offset-md-1 col-md-5 text-right" id="diets"></p>
                         </div>
                         <hr>
                         <div id="modal-image" class="col-md-8 img-thumbnail">
