added a user ID for everyone who signs up or has an account

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <header>
-    <div class="container" id="auth">
+    <div class="container auth" id="auth">
       <input type="email" id="txtEmail" placeholder="Email" class="hide">
 
       <input type="password" id="txtPassword" placeholder="Password" class="hide">
