--- a/index2.html
+++ b/index2.html
@@ -26,6 +26,25 @@
 </head>
 
 <body>
+    <div class="container auth" id="auth">
+        <input type="email" id="txtEmail" placeholder="Email" class="hide">
+
+        <input type="password" id="txtPassword" placeholder="Password" class="hide">
+
+        <button class="btn btn-success" id="btnLogin">
+            Log In
+        </button>
+        <button class="btn btn-info" id="btnSignUp">
+            Sign Up
+        </button>
+        <button class="btn btn-danger hide" id="btnLogout">
+            Log Out
+        </button>
+        <br>
+        <button class="btn btn-warning hide" id="btnAnony">
+            Sign In Anonymously
+        </button>
+    </div>
     <div class="container wrapper">
         <div class="input-group secondSearch">
             <input type="text" class="form-control col-xs-8" id="ingredient1" placeholder="Enter New Ingredients">
