animated title and modals with Animate.css, removed top margin from modal, added text to modal footer, updated map size and added custom markers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+  <!-- Animate.css -->  
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">    
   <!-- font awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <!-- Firebase -->
@@ -44,8 +47,8 @@
         Sign In Anonymously
       </button>
     </div>
-    <div class="overlay">
-      <h1>Quick Bytes</h1>
+    <div class="overlay animated lightSpeedIn">
+      <h1 class="">Quick Bytes</h1>
     </div>
 
   </header>
@@ -93,7 +96,7 @@
   <div class="modal fade" id="favoritesModal" role="dialog">
     <div class="modal-dialog modal-lg">
       <!-- Modal content-->
-      <div class="modal-content">
+      <div class="modal-content animated flipInX">
         <div class="modal-header">
           <h4 class="modal-title favoriteText">Favorite Receipes</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
