--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <!-- Animate.css -->  
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">  
     <!-- font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <!-- Firebase -->
@@ -163,7 +166,7 @@
 
     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
-            <div class="modal-content">
+            <div class="modal-content animated rollIn">
                 <div class="modal-header">
                     <h5 class="modal-title"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -200,8 +203,8 @@
                 </div>
                 <div class="modal-footer storeFind center">
 
-                    <label for="miles" id="getStores" class="searchStores">Search Stores Within
-                        <input id="miles" type="number">Miles
+                    <label for="miles" id="getStores" class="searchStores">Missing ingredients? Search stores within
+                        <input id="miles" type="number">miles
                         <button type="button" id="mapBtn" class="btn btn-dark btn-sm ">
                             <center>Go</center>
                         </button>
