--- a/index.html
+++ b/index.html
@@ -1,87 +1,137 @@
 <!doctype html>
 <html lang="en">
-  <head>
-<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<!-- font awesome -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-<!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
-<!-- Css link -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<!-- Firebase Link -->
-    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-<!-- Google API  -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-<!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <title>Quick Bytes</title>
-  </head>
-  <body>
-    <header>
-      <div class="overlay">
-        <h1>Quick Bytes</h1>
-      </div>
-    </header>
 
-<!-- main carousel -->
-  <div class="carouselWrap col-xs-12">
-        <div class="container-fluid mainSearch">
-          <div class="input-group">
-            <input type="text" class="form-control col-xs-8" id="ingredient1" placeholder="Enter Ingredient">
-            <button type="button" class="btn btn-default" id="addMore" data-toggle="dropdown" aria-expanded="false">
-              <span class="tooltiptext">Add More!</span>
-              <span class="plus">&#43;</span>
-            </button>
-            <div class="input-group-append">
-                <!--  -->
-            <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad();loading();" type="button">Find Receipes  <i class="fa fa-spinner" id="spin"> </i></button>
-            </div>
-          </div>
-        </div>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <!-- font awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+  <!-- Css link -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!-- Firebase Link -->
+  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <!-- Google API  -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+  <title>Quick Bytes</title>
+</head>
+
+<body>
+  <header>
+    <div class="container auth" id="auth">
+      <input type="email" id="txtEmail" placeholder="Email" class="hide">
+
+      <input type="password" id="txtPassword" placeholder="Password" class="hide">
+
+      <button class="btn btn-success" id="btnLogin">
+        Log In
+      </button>
+      <button class="btn btn-info" id="btnSignUp">
+        Sign Up
+      </button>
+      <button class="btn btn-danger hide" id="btnLogout">
+        Log Out
+      </button>
+      <br>
+      <button class="btn btn-warning hide" id="btnAnony">
+        Sign In Anonymously
+      </button>
+    </div>
+    <div class="overlay animated lightSpeedIn">
+      <h1 class="">Quick Bytes</h1>
+    </div>
+
+  </header>
+
+  <!-- main carousel -->
+  <div class="input-group mainSearch">
+    <input type="text" class="form-control" id="ingredient1" placeholder="Enter Ingredient">
+    <button type="button" class="btn btn-default" id="addMore" data-toggle="dropdown" aria-expanded="false">
+      <span class="tooltiptext">Add More!</span>
+      <span class="plus">&#43;</span>
+    </button>
+    <div class="input-group-append">
+      <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad();loading();" type="button">Find Receipes
+        <i class="fa fa-spinner" id="spin"> </i>
+      </button>
+    </div>
+  </div>
+  <div class="carouselWrap col-12">
     <div id="carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 carouselImg" src="assets/images/pic1.jpg"  alt="First slide">
+          <img class="d-block w-100 carouselImg" src="assets/images/pic1.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 carouselImg" src="assets/images/pic2.jpg"  alt="Second slide">
+          <img class="d-block w-100 carouselImg" src="assets/images/pic2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 carouselImg" src="assets/images/pic3.jpg"  alt="Third slide">
+          <img class="d-block w-100 carouselImg" src="assets/images/pic3.jpg" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 carouselImg" src="assets/images/pic4.jpg"  alt="Fourth slide">
+          <img class="d-block w-100 carouselImg" src="assets/images/pic4.jpg" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 carouselImg" src="assets/images/pic5.jpg"  alt="Fifth slide">
+          <img class="d-block w-100 carouselImg" src="assets/images/pic5.jpg" alt="Fifth slide">
         </div>
       </div>
     </div>
   </div>
+  <!-- Favorites Modal -->
+  <div class="favBtn">
+    <button class="btn btn-dark" data-toggle="modal" data-target="#favoritesModal" type="button">Your Favorites
+    </button>
+  </div>
 
-<!-- footer with copyright info
+  <div class="modal fade" id="favoritesModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <!-- Modal content-->
+      <div class="modal-content animated flipInX">
+        <div class="modal-header">
+          <h4 class="modal-title favoriteText">Favorite Receipes</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body" id='favoritesDisplay'>
+          <div class="container" id="favoritesCardDisplay"></div>
+          <div id="favoritesRecipeDisplay"></div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- footer with copyright info
   <footer class="footer">
     <div class="container">
       <span class="text-muted">&#169 Patrick Marrin, Joey Bridges, Corey Richard, Wesley Hanson - 2018</span>
     </div>
   </footer> -->
-<!-- Jquery Link -->
-      <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<!-- bootstrap js -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-        crossorigin="anonymous">
-      
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-        crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-        crossorigin="anonymous"></script>
-<!-- local js file Link -->
-<!-- <script src="assets/javascript/auth.js"></script> -->
-      <script src="assets/javascript/app.js"></script>
-      <script src="assets/javascript/spoonApi.js"></script>
-  </body>
+  <!-- Jquery Link -->
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <!-- bootstrap js -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+    crossorigin="anonymous">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+    crossorigin="anonymous"></script>
+  <!-- local js file Link -->
+  <!-- <script src="assets/javascript/auth.js"></script> -->
+
+  <script src="assets/javascript/app.js"></script>
+  <script src="assets/javascript/auth.js"></script>
+  <script src="assets/javascript/spoonApi.js"></script>
+  <script src="assets/javascript/favorites.js"></script>
+</body>
+
 </html>
