changes to styling

--- a/index2.html
+++ b/index2.html
@@ -152,15 +152,11 @@
         <button class="btn btn-warning hide" id="btnAnony">
             Sign In Anonymously
         </button>
-        <button class="btn btn-dark moreResults" id="moreResults" onclick="secondPageLoad();loading();" type="button">More Results
-            <i class="fa fa-spinner" id="spin"> </i>
-        </button>
     </div>
     <div class="container">
+        <button class="btn btn-dark homeBtn" onclick="homeLoad();" type="button">Home</button>
 
-        <button class="btn btn-dark moreResults" id="moreResults" onclick="secondPageLoad();loading();" type="button">More Results
-            <i class="fa fa-spinner" id="spin"> </i>
-        </button>
+        <!-- <button class="btn btn-dark moreResults" id="moreResults" onclick="secondPageLoad();loading();" type="button">More Results</button> -->
     </div>
 
 
