favs info added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,37 @@
           <div class="container" id="favoritesCardDisplay"></div>
           <div id="favoritesRecipeDisplay"></div>
         </div>
+        <div class="modal-footer">
+          <div class="container modal-text" id="favsInfo">
+            <div class="row">
+                <h2 class="col-md-8" id="title1"></h2>
+                <p class="offset-md-2 col-md-2" id="css-likes">
+                    <i class="fas fa-heart"></i> Likes:
+                    <span id="likes1"></span>
+                </p>
+            </div>
+            <hr>
+            <div class="row">
+                <p class="offset-md-1 col-md-5" id="cook-time">Cooking Time:
+                    <span id="time1"></span> Minutes
+                </p>
+                <p class="offset-md-1 col-md-5 text-right" id="diets"></p>
+            </div>
+            <hr>
+            <div id="modal-image" class="col-md-8 img-thumbnail">
+                <img class="img-fluid" id="image1">
+            </div class="col-md-4">
+            <div id="list1"></div>
+
+
+            <div id="instructions1" class="text-center-left"></div>
+            <hr>
+            <div id="instructionList1" class="text-center-left"></div>
+            <hr>
+            <div id="url1"></div>
+        </div>
+    </div>
+        </div>
       </div>
 
     </div>
