--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-1"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-1"></a>
                     </div>
                 </div>
                 <div class="card col-12 col-lg-3 card-pad">
@@ -61,7 +61,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn  truncate" data-target=".bd-example-modal-lg" id="basicModal-2"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn  truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-2"></a>
                     </div>
                 </div>
                 <div class="card col-12 col-lg-3 card-pad">
@@ -70,7 +70,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-3"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-3"></a>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-4"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-4"></a>
                     </div>
                 </div>
                 <div class="card col-12 col-lg-3 card-pad">
@@ -90,7 +90,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-5"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-5"></a>
                     </div>
                 </div>
                 <div class="card col-12 col-lg-3 card-pad">
@@ -99,7 +99,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-6"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-6"></a>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-7"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-7"></a>
                     </div>
                 </div>
                 <div class="card col-12 col-lg-3 card-pad">
@@ -119,7 +119,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-8"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-8"></a>
                     </div>
                 </div>
                 <div class="card col-12 col-lg-3 card-pad">
@@ -128,7 +128,7 @@
                         <span class="tooltipfav">Add to Favorites!</span>
                     </span>
                     <div class="card-body">
-                        <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-9"></a>
+                        <a href="#!" class="btn btn-primary recipe-btn truncate favsDisplay" data-target=".bd-example-modal-lg" id="basicModal-9"></a>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <div class="container modal-text">
+                    <div class="container modal-text favs">
                         <div class="row">
                             <h2 class="col-md-8" id="title"></h2>
                             <p class="offset-md-2 col-md-2" id="css-likes">
